--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-	font: 14px "Lucida Grande", "Trebuchet MS", Verdana, sans-serif;
+	font: 14px ROboto, Verdana, sans-serif;
 	color: #3b3b3b;
 }
 
