--- a/style.css
+++ b/style.css
@@ -1,13 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@500&family=Roboto:ital,wght@1,300&display=swap');
 
-@import url('https://fonts.googleapis.com/css2?family=Red+Hat+Mono:wght@300&display=swap');
 
 body {
-	font-family: 'Red Hat Mono', monospace;
+	font-family: 'Inter', sans-serif;
 	color: #3b3b3b;
+	padding: 5px;
 }
 
 h1,h2 {
-	font-family: 'Red Hat Mono', monospace;
+	font-family: 'Inter', sans-serif;
 }
 
 h1 { text-align: center;
@@ -89,7 +90,7 @@ a:hover {
 #footnote {
 	border-top: 1px dashed #aaa;
 	padding: 5px;
-	font: 75% "'Red Hat Mono', monospace;"
+	font-family: 'Inter', sans-serif;
 	
 }
 
